Updated page contents and styling
- Updated styling links for index.html
- Added some text to resources.html

--- a/analysis-pages/atvi.html
+++ b/analysis-pages/atvi.html
@@ -50,10 +50,10 @@
             <hr>
             <section class="analysis-description">
                 <h3>Comments on the stock:</h3>
-                <p>As it currently stands, ATVI is seems to be a very solid investment for a long term hold and would be a great addition to someone's portfolio. However, the valuation currently seems a bit high, but who knows when we could see a drop in price.</p>
+                <p>As it currently stands, ATVI is seems to be a very solid investment for a long term hold and would be a great addition to someone's portfolio. However, the valuation currently seems a bit high as the market appears to be very bullish and continues to climb.</p>
                 <img src="../img/atvi-criteria.svg" alt="Activision Blizzard">
             </section>
-            <a href="pdfs/atvi-coming-soon.pdf" class="btn" download>Download PDF of analysis paper</a>
+            <a href="../pdfs/#.pdf" class="btn" target="_blank">PDF of analysis paper</a>
         </section>
     </main>
 
