--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The MarketPal</title>
     <link rel="stylesheet" href="css/index-style.css">
     <link rel="stylesheet" href="css/calendar-modal-style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script data-ad-client="ca-pub-7533576871166781" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
