--- a/resources.html
+++ b/resources.html
@@ -40,6 +40,9 @@
     <main>
         <div class="wrapper">
            <section class="resources">
+               <section class="section-description">
+                   <h3>Helpful External Resources</h3>
+               </section>
                <div class="resource-info">
                     <a href="https://medium.com/popularengineering/how-to-calculate-the-intrinsic-value-of-stocks-like-warren-buffett-f9b97e3738ba" target="_blank">
                         <div class="resource-description">
