--- a/content.html
+++ b/content.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Content</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/content-style.css">
 </head>
