--- a/resources.html
+++ b/resources.html
@@ -39,63 +39,199 @@
     <!-- Main content -->
     <main>
         <div class="wrapper">
-           <section class="resources">
-               <section class="section-description">
+            <section class="resources">
+
+                <!-- Internal resources section -->
+                <section class="section-description">
+                   <h3>Helpful Internal Resources</h3>
+                   <p>These are helpful resources I've put together myself. These are are based on the research I do and the criteria I look for in stocks when I'm researching companies.</p>
+                </section>
+                <div class="internal-resources-wrapper">
+                    <section class="internal-resources">
+                        <!-- 
+                        <div class="resource-info">
+                            <a href="">
+                                <div class="resource-description">
+                                    <h3></h3>
+                                    <p></p>
+                                </div>
+                            </a>
+                            <img src="" alt="">
+                        </div>
+                        -->
+                        <div class="resource-info">
+                            <a href="https://medium.com/popularengineering/how-to-calculate-the-intrinsic-value-of-stocks-like-warren-buffett-f9b97e3738ba" target="_blank">
+                                <div class="resource-description">
+                                    <h3>How To Calculate The Intrinsic Value Of Stocks Like Warren Buffett</h3>
+                                    <p>This article explains how to find intrinsic value. I personally use this formula all the time and it's a step up from what I was doing previously.</p>
+                                </div>
+                            </a>
+                            <img src="img/warren-buffett-cartoon.png" alt="Warren Buffett">
+                        </div>
+                        <div class="resource-info">
+                            <a href="https://www.investopedia.com/articles/fundamental-analysis/09/five-must-have-metrics-value-investors.asp" target="_blank">
+                                <div class="resource-description">
+                                    <h3>5 Must-Have Metrics for Value Investors</h3>
+                                    <p>Just some essential metrics to know as an investor. You'll come across these often when researching companies and you'll likely need to understand them and use them in your analysis of a stock. Key one to focus on first would be bottom line if you don't know what it is; it's basic accounting vocabulary. Then focus on learning the rest of them.</p>
+                                </div>
+                            </a>
+                            <img src="img/chart-on-mac-screen.jpg" alt="Stock Chart">
+                        </div>
+                        <div class="resource-info">
+                            <a href="https://www.investopedia.com/terms/i/intrinsicvalue.asp" target="_blank">
+                                <div class="resource-description">
+                                    <h3>Intrinsic Value Definition</h3>
+                                    <p>Finding the intrinsic value is one of the first and most important steps when researching a company and it is very important to know both what it is, and how to calculate it.</p>
+                                </div>
+                            </a>
+                            <img src="img/stock-chart.jpg" alt="Stock market chart">
+                        </div>
+                        <div class="resource-info">
+                            <a href="https://www.investopedia.com/terms/m/marketcapitalization.asp" target="_blank">
+                                <div class="resource-description">
+                                    <h3>Market Capitalization Definition</h3>
+                                    <p>Knowing what the market cap of a company is and how to calculate it is quite handy. I personally use the market cap formula after finding a company's intrinsic value. I will take the intrinsic value I found and multiply by the number of outstanding shares to get the market cap a company would have at the stock price I plug into the formula.</p>
+                                </div>
+                            </a>
+                            <img src="img/stock-exchange-board.jpg" alt="Stock exchange board">
+                        </div>
+                        <div class="resource-info">
+                            <a href="https://www.investopedia.com/terms/p/price-to-bookratio.asp" target="_blank">
+                                <div class="resource-description">
+                                    <h3>Price-to-Book Ratio (PB Ratio) Definition</h3>
+                                    <p>Another good metric to see if a stock is over or undervalued. The plus with using this metric is that it's much quicker and easier to calculate.</p>
+                                </div>
+                            </a>
+                            <img src="img/accounting-coin-pic.jpg" alt="Accounting">
+                        </div>
+                        <div class="resource-info">
+                            <a href="https://www.investopedia.com/terms/p/price-earningsratio.asp" target="_blank">
+                                <div class="resource-description">
+                                    <h3>Price-to-Earnings Ratio - PE Ration Definition</h3>
+                                    <p>Another very handy metric to understand because you'll come across it very often and it's very useful to understand it's use.</p>
+                                </div>
+                            </a>
+                            <img src="img/accounting-pic.jpg" alt="Accounting">
+                        </div>
+                        <div class="resource-info">
+                            <a href="">
+                                <div class="resource-description">
+                                    <h3></h3>
+                                    <p></p>
+                                </div>
+                            </a>
+                            <img src="" alt="">
+                        </div>
+                        <div class="resource-info">
+                            <a href="">
+                                <div class="resource-description">
+                                    <h3></h3>
+                                    <p></p>
+                                </div>
+                            </a>
+                            <img src="" alt="">
+                        </div>
+                        <div class="resource-info">
+                            <a href="">
+                                <div class="resource-description">
+                                    <h3></h3>
+                                    <p></p>
+                                </div>
+                            </a>
+                            <img src="" alt="">
+                        </div>
+                    </section>
+                </div>
+
+                <!-- External resources section -->
+                <section class="section-description">
                    <h3>Helpful External Resources</h3>
-               </section>
-               <div class="resource-info">
-                    <a href="https://medium.com/popularengineering/how-to-calculate-the-intrinsic-value-of-stocks-like-warren-buffett-f9b97e3738ba" target="_blank">
-                        <div class="resource-description">
-                            <h3>How To Calculate The Intrinsic Value Of Stocks Like Warren Buffett</h3>
-                            <p>This article explains how to find intrinsic value. I personally use this formula all the time and it's a step up from what I was doing previously.</p>
+                   <p>These are helpful resources taken from various sources other than myself. These are helpful resources that I've used and for some, continue to use regularly when doing research. I felt like these would be a good place for someone to start and there will be more to be added in the future.</p>
+                </section>
+                <div class="external-resources-wrapper">
+                    <section class="external-resources">
+                        <div class="resource-info">
+                            <a href="https://medium.com/popularengineering/how-to-calculate-the-intrinsic-value-of-stocks-like-warren-buffett-f9b97e3738ba" target="_blank">
+                                <div class="resource-description">
+                                    <h3>How To Calculate The Intrinsic Value Of Stocks Like Warren Buffett</h3>
+                                    <p>This article explains how to find intrinsic value. I personally use this formula all the time and it's a step up from what I was doing previously.</p>
+                                </div>
+                            </a>
+                            <img src="img/warren-buffett-cartoon.png" alt="Warren Buffett">
                         </div>
-                    </a>
-                    <img src="img/warren-buffett-cartoon.png" alt="Warren Buffett">
-                </div>
-                <div class="resource-info">
-                    <a href="https://www.investopedia.com/articles/fundamental-analysis/09/five-must-have-metrics-value-investors.asp" target="_blank">
-                        <div class="resource-description">
-                            <h3>5 Must-Have Metrics for Value Investors</h3>
-                            <p>Just some essential metrics to know as an investor. You'll come across these often when researching companies and you'll likely need to understand them and use them in your analysis of a stock. Key one to focus on first would be bottom line if you don't know what it is; it's basic accounting vocabulary. Then focus on learning the rest of them.</p>
+                        <div class="resource-info">
+                            <a href="https://www.investopedia.com/articles/fundamental-analysis/09/five-must-have-metrics-value-investors.asp" target="_blank">
+                                <div class="resource-description">
+                                    <h3>5 Must-Have Metrics for Value Investors</h3>
+                                    <p>Just some essential metrics to know as an investor. You'll come across these often when researching companies and you'll likely need to understand them and use them in your analysis of a stock. Key one to focus on first would be bottom line if you don't know what it is; it's basic accounting vocabulary. Then focus on learning the rest of them.</p>
+                                </div>
+                            </a>
+                            <img src="img/chart-on-mac-screen.jpg" alt="Stock Chart">
                         </div>
-                    </a>
-                    <img src="img/chart-on-mac-screen.jpg" alt="Stock Chart">
-                </div>
-                <div class="resource-info">
-                    <a href="https://www.investopedia.com/terms/i/intrinsicvalue.asp" target="_blank">
-                        <div class="resource-description">
-                            <h3>Intrinsic Value Definition</h3>
-                            <p>Finding the intrinsic value is one of the first and most important steps when researching a company and it is very important to know both what it is, and how to calculate it.</p>
+                        <div class="resource-info">
+                            <a href="https://www.investopedia.com/terms/i/intrinsicvalue.asp" target="_blank">
+                                <div class="resource-description">
+                                    <h3>Intrinsic Value Definition</h3>
+                                    <p>Finding the intrinsic value is one of the first and most important steps when researching a company and it is very important to know both what it is, and how to calculate it.</p>
+                                </div>
+                            </a>
+                            <img src="img/stock-chart.jpg" alt="Stock market chart">
                         </div>
-                    </a>
-                    <img src="img/stock-chart.jpg" alt="Stock market chart">
-                </div>
-                <div class="resource-info">
-                    <a href="https://www.investopedia.com/terms/m/marketcapitalization.asp" target="_blank">
-                        <div class="resource-description">
-                            <h3>Market Capitalization Definition</h3>
-                            <p>Knowing what the market cap of a company is and how to calculate it is quite handy. I personally use the market cap formula after finding a company's intrinsic value. I will take the intrinsic value I found and multiply by the number of outstanding shares to get the market cap a company would have at the stock price I plug into the formula.</p>
+                        <div class="resource-info">
+                            <a href="https://www.investopedia.com/terms/m/marketcapitalization.asp" target="_blank">
+                                <div class="resource-description">
+                                    <h3>Market Capitalization Definition</h3>
+                                    <p>Knowing what the market cap of a company is and how to calculate it is quite handy. I personally use the market cap formula after finding a company's intrinsic value. I will take the intrinsic value I found and multiply by the number of outstanding shares to get the market cap a company would have at the stock price I plug into the formula.</p>
+                                </div>
+                            </a>
+                            <img src="img/stock-exchange-board.jpg" alt="Stock exchange board">
                         </div>
-                    </a>
-                    <img src="img/stock-exchange-board.jpg" alt="Stock exchange board">
-                </div>
-                <div class="resource-info">
-                    <a href="https://www.investopedia.com/terms/p/price-to-bookratio.asp" target="_blank">
-                        <div class="resource-description">
-                            <h3>Price-to-Book Ratio (PB Ratio) Definition</h3>
-                            <p>Another good metric to see if a stock is over or undervalued. The plus with using this metric is that it's much quicker and easier to calculate.</p>
+                        <div class="resource-info">
+                            <a href="https://www.investopedia.com/terms/p/price-to-bookratio.asp" target="_blank">
+                                <div class="resource-description">
+                                    <h3>Price-to-Book Ratio (PB Ratio) Definition</h3>
+                                    <p>Another good metric to see if a stock is over or undervalued. The plus with using this metric is that it's much quicker and easier to calculate.</p>
+                                </div>
+                            </a>
+                            <img src="img/accounting-coin-pic.jpg" alt="Accounting">
                         </div>
-                    </a>
-                    <img src="img/accounting-coin-pic.jpg" alt="Accounting">
-                </div>
-                <div class="resource-info">
-                    <a href="https://www.investopedia.com/terms/p/price-earningsratio.asp" target="_blank">
-                        <div class="resource-description">
-                            <h3>Price-to-Earnings Ratio - PE Ration Definition</h3>
-                            <p>Another very handy metric to understand because you'll come across it very often and it's very useful to understand it's use.</p>
+                        <div class="resource-info">
+                            <a href="https://www.investopedia.com/terms/p/price-earningsratio.asp" target="_blank">
+                                <div class="resource-description">
+                                    <h3>Price-to-Earnings Ratio - PE Ration Definition</h3>
+                                    <p>Another very handy metric to understand because you'll come across it very often and it's very useful to understand it's use.</p>
+                                </div>
+                            </a>
+                            <img src="img/accounting-pic.jpg" alt="Accounting">
                         </div>
-                    </a>
-                    <img src="img/accounting-pic.jpg" alt="Accounting">
+                        <div class="resource-info">
+                            <a href="">
+                                <div class="resource-description">
+                                    <h3></h3>
+                                    <p></p>
+                                </div>
+                            </a>
+                            <img src="" alt="">
+                        </div>
+                        <div class="resource-info">
+                            <a href="">
+                                <div class="resource-description">
+                                    <h3></h3>
+                                    <p></p>
+                                </div>
+                            </a>
+                            <img src="" alt="">
+                        </div>
+                        <div class="resource-info">
+                            <a href="">
+                                <div class="resource-description">
+                                    <h3></h3>
+                                    <p></p>
+                                </div>
+                            </a>
+                            <img src="" alt="">
+                        </div>
+                    </section>
                 </div>
                 <!-- 
                 <div class="resource-info">
