updated front page img to something smaller and edited content in some pages

--- a/analysis-pages/atvi.html
+++ b/analysis-pages/atvi.html
@@ -50,7 +50,7 @@
             <hr>
             <section class="analysis-description">
                 <h3>Comments on the stock:</h3>
-                <p>As it currently stands, ATVI is seems to be a very solid investment for a long term hold and would be a great addition to someone's portfolio. However, the valuation currently seems a bit high as the market appears to be very bullish and continues to climb.</p>
+                <p>As it currently stands, ATVI is seems to be a very solid investment for a long term hold and would be a great addition to someone's portfolio. However, the valuation currently seems a bit high as the market continues to climb. I'd like to see it come down dramatically if I'm going to be buying.</p>
                 <img src="../img/atvi-criteria.svg" alt="Activision Blizzard">
             </section>
             <a href="../pdfs/#.pdf" class="btn" target="_blank">PDF of analysis paper</a>
