--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
         <div class="wrapper">
             <section class="blog-overview-container">
                 <h3>The Bull Blog</h3>
-                <p>New blogs every Friday. Talking about some of the things that happened during the trading week.</p>
+                <p>New blogs every Friday. I talk about events that happened throughout the week, company earnings, my thoughts on the market</p>
             </section>
             <section class="blog-links">
                 <div class="blog-content">
