Added new content and updated styling
- Added blog content
- Updated resources page and added a new resource.

--- a/blog-posts/welcome-blog.html
+++ b/blog-posts/welcome-blog.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
-    <title>Blog</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/blog-style.css">
+    <title>Welcome to the Blog</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/blog-post-style.css">
 </head>
 <body>
     <!-- Header -->
@@ -25,42 +25,29 @@
             </div>
             <nav class="nav-bar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="analysis.html">Stock Analysis</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../about.html">About</a></li>
+                    <li><a href="../portfolio.html">Portfolio</a></li>
+                    <li><a href="../analysis.html">Stock Analysis</a></li>
+                    <li><a href="../blog.html">Blog</a></li>
                 </ul>
             </nav>
         </div>
-        <a href="support.html" class="btn">Support</a>
+        <a href="../support.html" class="btn">Support</a>
     </header>
 
     <!-- Main content -->
     <main>
         <div class="wrapper">
-            <section class="blog-overview-container">
-                <h3>The Bull Blog</h3>
-                <p>New blogs every Friday. I talk about events that happened throughout the week, company earnings, my thoughts on the market</p>
-            </section>
-            <section class="blog-links">
-                <div class="blog-content">
-                    <img src="img/stock-exchange-board.jpg" alt="New York Stock Exchange">
-                    <h3>Welcome to the Bull Blog</h3>
-                    <p>5/15/2020</p>
-                    <p>This is a short introduction on what this blog is all about.</p>
-                    <a href="blog-posts/welcome-blog.html">Read More</a>
+            <section class="blog-post-content">
+                <h3 class="title">Welcome to the Bull Blog</h3>
+                <p class="date">5/15/2020</p>
+                <p class="author"><i>Author: Anthony Diaz</i></p>
+                <div class="blog-container">
+                    <p>Hello! My name is Anthony and I run everything you see here. This blog focuses on bringing you some highlights for the trading week, updates on investments, companies in the portfolio and on the watchlist, and more. I enjoying talking all about the stock market and my goal with this blog and this website is to bring you content that I wish I could find somewhere on the internet. I want to educate others on the power of value investing, (however, if you choose a different method that's fine too) but I want to learn along with those who follow the site. I consider myself to be an enternal student (yes, I stole that front Master Yi) in the markets and I want to continue sharing what I learn along the way.</p>
+                    <br>
+                    <p>I got into value investing because of my fastinating with Warren Buffett, the Oracle of Omaha. I soon started to adopt his methods that I could find on the internet and in books. From there I started to apply what I was learning in these books, as well as what I was learning in my accounting class I was taking. I originally started in the stock market as a day trader, and although that was fun and I do still find it enjoyable, I wasn't necessarily that good at it. I found that I had better results when I stuck to companies longer term, whether that was a trade I held for a few months or an investment I could hold potentially hold on to for the rest of my life. This is actually something Warren Buffett applies in his approach to investing, and that's investing in companies you're comfortable holding on to for a very long time.</p>
                 </div>
-                <hr>
-                
-                <!-- 
-                <div class="blog-content">
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <hr>
-                 -->
             </section>
         </div>
     </main>
