--- a/newsletter.html
+++ b/newsletter.html
@@ -42,7 +42,7 @@
         <div class="wrapper">
             <section class="newsletter-description">
                 <h3>What is The MarketPal Newsletter?</h3>
-                <p>Every Monday, you'll get a newsletter that is meant to expand your knowledge. The news letters include interesting thoughts and ideas from me that can help you get inspired to continue learning about investing. The news letters also include updates when new stocks are added to the portfolio, new stock analysis papers, short summaries of stock analysis papers that I release every other week, tips, resources that can help you speed up that learning curve, and a lot more.</p>
+                <p>Every Monday, you'll get a newsletter that is meant to expand your knowledge. The news letters include interesting thoughts and ideas from me that can help you get inspired to continue learning about investing. The news letters also include updates when new stocks are added to the portfolio, new stock analysis papers, short summaries from previous weeks blog, short summaries of stock analysis papers that I release every other week, tips, resources that can help you speed up that learning curve, and more.</p>
             </section>
                     <!-- Begin Sendinblue Form -->
             <!-- START - We recommend to place the below code in head tag of your website html  -->
