--- a/resources.html
+++ b/resources.html
@@ -60,85 +60,16 @@
                         </div>
                         -->
                         <div class="resource-info">
-                            <a href="https://medium.com/popularengineering/how-to-calculate-the-intrinsic-value-of-stocks-like-warren-buffett-f9b97e3738ba" target="_blank">
+                            <a href="pdfs/calculating-profitability.pdf" target="_blank">
                                 <div class="resource-description">
-                                    <h3>How To Calculate The Intrinsic Value Of Stocks Like Warren Buffett</h3>
-                                    <p>This article explains how to find intrinsic value. I personally use this formula all the time and it's a step up from what I was doing previously.</p>
+                                    <h3>How to find a company's profitability</h3>
+                                    <p>This is an important aspect of any business; how much wealth is the company actually generating for its shareholders. When you're going to invest in a company, you ideally would want as much of that revenue going to the bottom line as possible, otherwise, it might be a sign that the company isn't being managed as well as it could be.</p>
                                 </div>
                             </a>
-                            <img src="img/warren-buffett-cartoon.png" alt="Warren Buffett">
+                            <img src="img/profit.jpg" alt="Money image">
                         </div>
-                        <div class="resource-info">
-                            <a href="https://www.investopedia.com/articles/fundamental-analysis/09/five-must-have-metrics-value-investors.asp" target="_blank">
-                                <div class="resource-description">
-                                    <h3>5 Must-Have Metrics for Value Investors</h3>
-                                    <p>Just some essential metrics to know as an investor. You'll come across these often when researching companies and you'll likely need to understand them and use them in your analysis of a stock. Key one to focus on first would be bottom line if you don't know what it is; it's basic accounting vocabulary. Then focus on learning the rest of them.</p>
-                                </div>
-                            </a>
-                            <img src="img/chart-on-mac-screen.jpg" alt="Stock Chart">
-                        </div>
-                        <div class="resource-info">
-                            <a href="https://www.investopedia.com/terms/i/intrinsicvalue.asp" target="_blank">
-                                <div class="resource-description">
-                                    <h3>Intrinsic Value Definition</h3>
-                                    <p>Finding the intrinsic value is one of the first and most important steps when researching a company and it is very important to know both what it is, and how to calculate it.</p>
-                                </div>
-                            </a>
-                            <img src="img/stock-chart.jpg" alt="Stock market chart">
-                        </div>
-                        <div class="resource-info">
-                            <a href="https://www.investopedia.com/terms/m/marketcapitalization.asp" target="_blank">
-                                <div class="resource-description">
-                                    <h3>Market Capitalization Definition</h3>
-                                    <p>Knowing what the market cap of a company is and how to calculate it is quite handy. I personally use the market cap formula after finding a company's intrinsic value. I will take the intrinsic value I found and multiply by the number of outstanding shares to get the market cap a company would have at the stock price I plug into the formula.</p>
-                                </div>
-                            </a>
-                            <img src="img/stock-exchange-board.jpg" alt="Stock exchange board">
-                        </div>
-                        <div class="resource-info">
-                            <a href="https://www.investopedia.com/terms/p/price-to-bookratio.asp" target="_blank">
-                                <div class="resource-description">
-                                    <h3>Price-to-Book Ratio (PB Ratio) Definition</h3>
-                                    <p>Another good metric to see if a stock is over or undervalued. The plus with using this metric is that it's much quicker and easier to calculate.</p>
-                                </div>
-                            </a>
-                            <img src="img/accounting-coin-pic.jpg" alt="Accounting">
-                        </div>
-                        <div class="resource-info">
-                            <a href="https://www.investopedia.com/terms/p/price-earningsratio.asp" target="_blank">
-                                <div class="resource-description">
-                                    <h3>Price-to-Earnings Ratio - PE Ration Definition</h3>
-                                    <p>Another very handy metric to understand because you'll come across it very often and it's very useful to understand it's use.</p>
-                                </div>
-                            </a>
-                            <img src="img/accounting-pic.jpg" alt="Accounting">
-                        </div>
-                        <div class="resource-info">
-                            <a href="">
-                                <div class="resource-description">
-                                    <h3></h3>
-                                    <p></p>
-                                </div>
-                            </a>
-                            <img src="" alt="">
-                        </div>
-                        <div class="resource-info">
-                            <a href="">
-                                <div class="resource-description">
-                                    <h3></h3>
-                                    <p></p>
-                                </div>
-                            </a>
-                            <img src="" alt="">
-                        </div>
-                        <div class="resource-info">
-                            <a href="">
-                                <div class="resource-description">
-                                    <h3></h3>
-                                    <p></p>
-                                </div>
-                            </a>
-                            <img src="" alt="">
+                        <div class="more-coming-soon">                            
+                            <h3>More resources coming up!</h3>
                         </div>
                     </section>
                 </div>
@@ -203,33 +134,6 @@
                                 </div>
                             </a>
                             <img src="img/accounting-pic.jpg" alt="Accounting">
-                        </div>
-                        <div class="resource-info">
-                            <a href="">
-                                <div class="resource-description">
-                                    <h3></h3>
-                                    <p></p>
-                                </div>
-                            </a>
-                            <img src="" alt="">
-                        </div>
-                        <div class="resource-info">
-                            <a href="">
-                                <div class="resource-description">
-                                    <h3></h3>
-                                    <p></p>
-                                </div>
-                            </a>
-                            <img src="" alt="">
-                        </div>
-                        <div class="resource-info">
-                            <a href="">
-                                <div class="resource-description">
-                                    <h3></h3>
-                                    <p></p>
-                                </div>
-                            </a>
-                            <img src="" alt="">
                         </div>
                     </section>
                 </div>
