Updated header and blog page
- Fixed "The Marketpal" to "The MarketPal" in the header.
- Added new blog.

--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
                 <a href="index.html">
-                    <h1>The <span>Marketpal</span></h1>
+                    <h1>The <span>MarketPal</span></h1>
                 </a>
             </div>
             <nav class="nav-bar">
@@ -52,13 +52,20 @@
                     <a href="blog-posts/welcome-blog.html">Read More</a>
                 </div>
                 <hr>
-                
+                <div class="blog-content">
+                    <img src="blog-posts/blog-img/franklin.PNG" alt="GTA 5 Franklin">
+                    <h3>The Bulear Market and Gaming</h3>
+                    <p>In this blog I wanted to talk about gaming company earnings and the "Bulear" market which I made up to describe this uncertain bullishly bearish market.</p>
+                    <a href="blog-posts/the-bulear-market-and-gaming.html">Read More</a>
+                </div>
+                <hr>
                 <!-- 
                 <div class="blog-content">
                     <img src="" alt="">
                     <h3></h3>
                     <p></p>
                 </div>
+                <a href="">Read More</a>
                 <hr>
                  -->
             </section>
