Updated some content in some pages

--- a/blog.html
+++ b/blog.html
@@ -40,13 +40,13 @@
     <main>
         <div class="wrapper">
             <section class="blog-overview-container">
-                <h3>The Bull Blog</h3>
+                <h3>The MarketPal Blog</h3>
                 <p>New blogs every Friday. I talk about events that happened throughout the week, company earnings, my thoughts on the market</p>
             </section>
             <section class="blog-links">
                 <div class="blog-content">
                     <img src="img/stock-exchange-board.jpg" alt="New York Stock Exchange">
-                    <h3>Welcome to the Bull Blog</h3>
+                    <h3>Welcome to Blog!</h3>
                     <p>5/15/2020</p>
                     <p>This is a short introduction on what this blog is all about.</p>
                     <a href="blog-posts/welcome-blog.html">Read More</a>
