--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <section id="showcase" class="grid">
                 <div class="bg-image"></div>
                 <div class="showcase-content">
-                    <h2>The Bullish Newsletter</h2>
-                    <p>I will send out a newsletter every Monday morning. In these newsletters, you will recieve thoughts, ideas, tips, recommendations, resources, and many other things that will help you as an investor.</p>
+                    <h2>The MarketPal Newsletter</h2>
+                    <p>I will send out a newsletter every Monday morning. In these newsletters, you will recieve thoughts, ideas, tips, recommendations, resources, among other thing I've found to be helpful, inspiring, and motivational.</p>
                 </div>
                 <a href="newsletter.html" class="btn">Sign Up</a>
             </section>
