--- a/blog-posts/welcome-blog.html
+++ b/blog-posts/welcome-blog.html
@@ -40,7 +40,7 @@
     <main>
         <div class="wrapper">
             <section class="blog-post-content">
-                <h3 class="title">Welcome to the Bull Blog</h3>
+                <h3 class="title">Welcome to Blog!</h3>
                 <p class="date">5/15/2020</p>
                 <p class="author"><i>Author: Anthony Diaz</i></p>
                 <div class="blog-container">
