--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
                 <div class="blog-content">
                     <img src="blog-posts/blog-img/franklin.PNG" alt="GTA 5 Franklin">
                     <h3>The Bulear Market and Gaming</h3>
-                    <p>In this blog I wanted to talk about gaming company earnings and the "Bulear" market which I made up to describe this uncertain bullishly bearish market.</p>
+                    <p>Big tech and gaming stocks continue their climb some of these companies benefit from the COVID-19 pandemic and stay-at-home orders. In this blog I wanted to talk about gaming company earnings and my opinion on whether I think this momentum will last.</p>
                     <a href="blog-posts/the-bulear-market-and-gaming.html">Read More</a>
                 </div>
                 <hr>
