--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/marketpal-logo.svg">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
     <title>Contact</title>
     <link rel="stylesheet" href="css/contact-style.css">
