--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <span class="closeBtn">&times;</span>
                             <div class="google-calendar-container">
                                 <h3>Monthly Calendar</h3>
-                                <iframe class="google-calendar-insert" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=bmZuN2VsamQzbmM5b2JkdXQ1bTh2bDR1YW9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZmxjM2NsdDlub3FvZG1scWlkdWdsYnZwY3NAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%230B8043&amp;color=%2333B679&amp;title=The%20MarketPal%20Monthly%20Calendar" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                                <iframe class="google-calendar-insert" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=dGhlbWFya2V0cGFsLmludmVzdEBnbWFpbC5jb20&amp;src=bmZuN2VsamQzbmM5b2JkdXQ1bTh2bDR1YW9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZmxjM2NsdDlub3FvZG1scWlkdWdsYnZwY3NAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23F4511E&amp;color=%230B8043&amp;color=%23039BE5&amp;title=The%20MarketPal%20Calendar" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
                             </div>
                         </div>
                     </div>
