--- a/analysis-pages/atvi.html
+++ b/analysis-pages/atvi.html
@@ -20,7 +20,7 @@
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <h1>The <span>MarketPal</span></h1>
                 </a>
             </div>
