Updated portfolio page and made calendar more responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -373,6 +373,25 @@
                         </div>
                         <!-- TradingView Widget END -->
                     </div>
+                    <div class="watchlist-trade-stock">
+                        <h3>CNK</h3>
+                        <h4>Cinemark Holdings, Inc.</h4>
+                        <!-- TradingView Widget BEGIN -->
+                        <div class="tradingview-widget-container">
+                            <div class="tradingview-widget-container__widget"></div>
+                            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/CNK/" rel="noopener" target="_blank"><span class="blue-text">CNK Quotes</span></a> by TradingView</div>
+                            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                            {
+                            "symbol": "CNK",
+                            "width": "100%",
+                            "colorTheme": "light",
+                            "isTransparent": true,
+                            "locale": "en"
+                        }
+                            </script>
+                        </div>
+                        <!-- TradingView Widget END -->
+                    </div>
                     <!-- Add more stocks to the investments watchlist here -->
                 </div>
                 
@@ -381,23 +400,42 @@
                     <h2>Trades Watchlist</h2>
                     <hr class="watchlist-divider">
                     <div class="watchlist-trade-stock">
+                        <h3>TTWO</h3>
+                        <h4>Take-Two Interactive, Inc.</h4>
+                        <!-- TradingView Widget BEGIN -->
+                        <div class="tradingview-widget-container">
+                            <div class="tradingview-widget-container__widget"></div>
+                            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-TTWO/" rel="noopener" target="_blank"><span class="blue-text">TTWO Quotes</span></a> by TradingView</div>
+                            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                            {
+                            "symbol": "NASDAQ:TTWO",
+                            "width": "100%",
+                            "colorTheme": "light",
+                            "isTransparent": true,
+                            "locale": "en"
+                        }
+                            </script>
+                        </div>
+                        <!-- TradingView Widget END -->
+                    </div>
+                    <div class="watchlist-trade-stock">
                         <h3>SQ</h3>
                         <h4>Square, Inc.</h2>
-                            <!-- TradingView Widget BEGIN -->
-                            <div class="tradingview-widget-container">
-                                <div class="tradingview-widget-container__widget"></div>
-                                <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/SQ/" rel="noopener" target="_blank"><span class="blue-text">SQ Quotes</span></a> by TradingView</div>
-                                <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
-                                {
-                                "symbol": "SQ",
-                                "width": "100%",
-                                "colorTheme": "light",
-                                "isTransparent": true,
-                                "locale": "en"
-                            }
-                                </script>
-                            </div>
-                            <!-- TradingView Widget END -->
+                        <!-- TradingView Widget BEGIN -->
+                        <div class="tradingview-widget-container">
+                            <div class="tradingview-widget-container__widget"></div>
+                            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/SQ/" rel="noopener" target="_blank"><span class="blue-text">SQ Quotes</span></a> by TradingView</div>
+                            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                            {
+                            "symbol": "SQ",
+                            "width": "100%",
+                            "colorTheme": "light",
+                            "isTransparent": true,
+                            "locale": "en"
+                        }
+                            </script>
+                        </div>
+                        <!-- TradingView Widget END -->
                     </div>
                     <hr class="watchlist-stock-divider">
                     <div class="watchlist-trade-stock">
