Added a new resource and updated blog page

--- a/resources.html
+++ b/resources.html
@@ -51,7 +51,7 @@
                     <section class="internal-resources">
                         <!-- 
                         <div class="resource-info">
-                            <a href="">
+                            <a href="" target="_blank">
                                 <div class="resource-description">
                                     <h3></h3>
                                     <p></p>
@@ -59,7 +59,16 @@
                             </a>
                             <img src="" alt="">
                         </div>
-                        -->
+                    -->
+                        <div class="resource-info">
+                            <a href="pdfs/calculating-efficiency.pdf" target="_blank">
+                                <div class="resource-description">
+                                    <h3>How to find a company's efficiency</h3>
+                                    <p>This will demonstrate how I find a company's efficiency using the asset turnover ratio. It's important to understand if a business is using their assets efficiently to generate sales, if not, you want to know what's causing the problem and how that will impact your investment.</p>
+                                </div>
+                            </a>
+                            <img src="img/efficient-machine.jpg" alt="Machine">
+                        </div>
                         <div class="resource-info">
                             <a href="pdfs/calculating-profitability.pdf" target="_blank">
                                 <div class="resource-description">
