--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
                     <img src="blog-posts/blog-img/franklin.PNG" alt="GTA 5 Franklin">
                     <h3>The Bulear Market and Gaming</h3>
                     <p>5/22/2020</p>
-                    <p>Big tech and gaming stocks continue their climb some of these companies benefit from the COVID-19 pandemic and stay-at-home orders. In this blog I wanted to talk about gaming company earnings and my opinion on whether I think this momentum will last.</p>
+                    <p>Big tech and gaming stocks continue their climb some of these companies benefit from the COVID-19 pandemic and stay-at-home orders. Stocks like TTWO, that reported earnings of $1.07 per share when Wall Street was estimating $0.89 per share, going well above those estimates. In this blog I wanted to talk about gaming company earnings and my opinion on whether I think this momentum will last.</p>
                     <a href="blog-posts/the-bulear-market-and-gaming.html">Read More</a>
                 </div>
                 <hr>
