removed .html extension on pages and added 404 page to the website
Also added .htaccess files for both of these things.

--- a/blog.html
+++ b/blog.html
@@ -20,21 +20,21 @@
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
-                <a href="index.html">
+                <a href="index">
                     <h1>The <span>MarketPal</span></h1>
                 </a>
             </div>
             <nav class="nav-bar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="analysis.html">Stock Analysis</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="index">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="portfolio">Portfolio</a></li>
+                    <li><a href="analysis">Stock Analysis</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </nav>
         </div>
-        <a href="support.html" class="btn">Support</a>
+        <a href="support" class="btn">Support</a>
     </header>
 
     <!-- Main content -->
@@ -50,7 +50,7 @@
                     <h3>Welcome to Blog!</h3>
                     <p>5/15/2020</p>
                     <p>This is a short introduction on what this blog is all about.</p>
-                    <a href="blog-posts/welcome-blog.html">Read More</a>
+                    <a href="blog-posts/welcome-blog">Read More</a>
                 </div>
                 <hr>
                 <div class="blog-content">
@@ -58,7 +58,7 @@
                     <h3>The Bulear Market and Gaming</h3>
                     <p>5/22/2020</p>
                     <p>Big tech and gaming stocks continue their climb some of these companies benefit from the COVID-19 pandemic and stay-at-home orders. Stocks like TTWO, that reported earnings of $1.07 per share when Wall Street was estimating $0.89 per share, going well above those estimates. In this blog I wanted to talk about gaming company earnings and my opinion on whether I think this momentum will last.</p>
-                    <a href="blog-posts/the-bulear-market-and-gaming.html">Read More</a>
+                    <a href="blog-posts/the-bulear-market-and-gaming">Read More</a>
                 </div>
                 <hr>
                 <!-- 
@@ -99,7 +99,7 @@
                 <h2>Contact</h2>
                 <hr>
                 <p><span>email:</span><br>contact@themarketpal.com</p>
-                <a href="contact.html" target="_blank" class="btn">Message through website</a>
+                <a href="contact" target="_blank" class="btn">Message through website</a>
             </div>
         </footer>
 </body>
