--- a/contact.html
+++ b/contact.html
@@ -21,28 +21,28 @@
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
-                <a href="index.html">
+                <a href="index">
                     <h1>The <span>MarketPal</span></h1>
                 </a>
             </div>
             <nav class="nav-bar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="analysis.html">Stock Analysis</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="index">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="portfolio">Portfolio</a></li>
+                    <li><a href="analysis">Stock Analysis</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </nav>
         </div>
-        <a href="support.html" class="btn" target='_blank'>Support</a>
+        <a href="support" class="btn" target='_blank'>Support</a>
     </header>
     
     <main>
         <!-- Heading -->
         <h2>Submit something to The MarketPal</h2>
         <section class="contact-us">
-            <form class="box-wrapper" action="submission.html" method="post">
+            <form class="box-wrapper" action="submission" method="post">
 
                 <!-- email box -->
                 <section class="email-box">
@@ -108,7 +108,7 @@
             <h2>Contact</h2>
             <hr>
             <p><span>email:</span><br>anthonydiaz917@gmail.com</p>
-            <a href="contact.html" class="btn">Message through website</a>
+            <a href="contact" class="btn">Message through website</a>
         </div>
     </footer>
 </body>
