--- a/newsletter.html
+++ b/newsletter.html
@@ -21,21 +21,21 @@
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
-                <a href="index.html">
+                <a href="index">
                     <h1>The <span>MarketPal</span></h1>
                 </a>
             </div>
             <nav class="nav-bar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="analysis.html">Stock Analysis</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="index">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="portfolio">Portfolio</a></li>
+                    <li><a href="analysis">Stock Analysis</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </nav>
         </div>
-        <a href="support.html" class="btn">Support</a>
+        <a href="support" class="btn">Support</a>
     </header>
 
     <!-- Main content -->
@@ -191,7 +191,7 @@
                 <h2>Contact</h2>
                 <hr>
                 <p><span>email:</span><br>contact@themarketpal.com</p>
-                <a href="contact.html" target="_blank" class="btn">Message through website</a>
+                <a href="contact" target="_blank" class="btn">Message through website</a>
             </div>
         </footer>
 </body>
