--- a/not-found.html
+++ b/not-found.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/marketpal-logo.svg">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/blog-post-style.css">
+    <title>Page Not Found</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -26,34 +25,64 @@
             </div>
             <nav class="nav-bar">
                 <ul>
-                    <li><a href="../index">Home</a></li>
-                    <li><a href="../about">About</a></li>
-                    <li><a href="../portfolio">Portfolio</a></li>
-                    <li><a href="../analysis">Stock Analysis</a></li>
-                    <li><a href="../blog">Blog</a></li>
+                    <li><a href="index">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="portfolio">Portfolio</a></li>
+                    <li><a href="analysis">Stock Analysis</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </nav>
         </div>
-        <a href="../support" class="btn">Support</a>
+        <a href="support" class="btn">Support</a>
     </header>
 
     <!-- Main content -->
     <main>
-        <div class="wrapper">
-            <section class="blog-post-content">
-                <h3 class="title"></h3>
-                <p class="date"></p>
-                <p class="author"><i>Author: Anthony Diaz</i></p>
-                <div class="blog-container">
-                    
-                </div>
-                <div id="resources">
-                    <h3></h3>
-                    <p></p>
-                    <a href="#"></a>
-                </div>
-            </section>
+        <div class="nf-msg">
+            <h3>Page Not Found</h3>
+            <p>Oof! The page you're looking for ain't here.</p>
         </div>
+        <div class="nf-img">
+            <img src="img/nf-image.svg" alt="Page Not Found">
+        </div>
+        <style>
+            main{
+                height: 800px;
+            }
+
+            .nf-msg{
+                display: block;
+                height: 45px;
+                text-align: center;
+                margin: 100px auto 20px auto;
+            }
+
+            .nf-msg h3{
+                font-family: "Lato";
+                font-size: 45px;
+                font-weight: 500;
+            }
+
+            .nf-msg p{
+                font-family: "Georgia";
+                font-size: 25px;
+                padding: 20px;
+            }
+            
+            .nf-img{
+                display: flex;
+                height: 300px;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .nf-img img{
+                display: block;
+                width: 100%;
+                height: 100%;
+                margin: 0 auto;
+            }
+        </style>
     </main>
 
         <!-- Footer content -->
