--- a/submission.html
+++ b/submission.html
@@ -21,21 +21,21 @@
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
-                <a href="index.html">
+                <a href="index">
                     <h1>The <span>MarketPal</span></h1>
                 </a>
             </div>
             <nav class="nav-bar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="analysis.html">Stock Analysis</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="index">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="portfolio">Portfolio</a></li>
+                    <li><a href="analysis">Stock Analysis</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </nav>
         </div>
-        <a href="support.html" class="btn">Support</a>
+        <a href="support" class="btn">Support</a>
     </header>
 
     <!-- Main content -->
@@ -44,7 +44,7 @@
         <h2>Thank you for your submission!</h2>
         <section class="contact-us">
             <h2>Your submission will replied to as soon as possible.<br><span>Would you like to go back to the home page?</span></h2>
-            <a class="btn" href="index.html">Go back</a>
+            <a class="btn" href="index">Go back</a>
         </section>
     </main>
 
@@ -73,7 +73,7 @@
                 <h2>Contact</h2>
                 <hr>
                 <p><span>email:</span><br>contact@themarketpal.com</p>
-                <a href="contact.html" target="_blank" class="btn">Message through website</a>
+                <a href="contact" target="_blank" class="btn">Message through website</a>
             </div>
         </footer>
 </body>
