Added new resource to resources page

--- a/resources.html
+++ b/resources.html
@@ -61,9 +61,18 @@
                         </div>
                     -->
                         <div class="resource-info">
+                            <a href="pdfs/calculating-productivity.pdf" target="_blank">
+                                <div class="resource-description">
+                                    <h3>How to Find a Company's Productivity</h3>
+                                    <p>Once you have your profitability and efficiency, you can then find the core productivity of the business using those two numbers. This one is useful to gauge whether business operations are well-managed</p>
+                                </div>
+                            </a>
+                            <img src="img/black-calc.jpg" alt="Accounting">
+                        </div>
+                        <div class="resource-info">
                             <a href="pdfs/calculating-efficiency.pdf" target="_blank">
                                 <div class="resource-description">
-                                    <h3>How to find a company's efficiency</h3>
+                                    <h3>How to Find a Company's Efficiency</h3>
                                     <p>This will demonstrate how I find a company's efficiency using the asset turnover ratio. It's important to understand if a business is using their assets efficiently to generate sales, if not, you want to know what's causing the problem and how that will impact your investment.</p>
                                 </div>
                             </a>
@@ -72,7 +81,7 @@
                         <div class="resource-info">
                             <a href="pdfs/calculating-profitability.pdf" target="_blank">
                                 <div class="resource-description">
-                                    <h3>How to find a company's profitability</h3>
+                                    <h3>How to Find a Company's Profitability</h3>
                                     <p>This is an important aspect of any business; how much wealth is the company actually generating for its shareholders. When you're going to invest in a company, you ideally would want as much of that revenue going to the bottom line as possible, otherwise, it might be a sign that the company isn't being managed as well as it could be.</p>
                                 </div>
                             </a>
