Updated blog page

--- a/blog.html
+++ b/blog.html
@@ -45,22 +45,6 @@
                 <p>New blogs every Friday. I talk about events that happened throughout the week, company earnings, my thoughts on the market</p>
             </section>
             <section class="blog-links">
-                <div class="blog-content">
-                    <img src="img/stock-exchange-board.jpg" alt="New York Stock Exchange">
-                    <h3>Welcome to Blog!</h3>
-                    <p>5/15/2020</p>
-                    <p>This is a short introduction on what this blog is all about.</p>
-                    <a href="blog-posts/welcome-blog">Read More</a>
-                </div>
-                <hr>
-                <div class="blog-content">
-                    <img src="blog-posts/blog-img/franklin.PNG" alt="GTA 5 Franklin">
-                    <h3>The Bulear Market and Gaming</h3>
-                    <p>5/22/2020</p>
-                    <p>Big tech and gaming stocks continue their climb some of these companies benefit from the COVID-19 pandemic and stay-at-home orders. Stocks like TTWO, that reported earnings of $1.07 per share when Wall Street was estimating $0.89 per share, going well above those estimates. In this blog I wanted to talk about gaming company earnings and my opinion on whether I think this momentum will last.</p>
-                    <a href="blog-posts/the-bulear-market-and-gaming">Read More</a>
-                </div>
-                <hr>
                 <!-- 
                 <div class="blog-content">
                     <img src="" alt="">
@@ -69,7 +53,33 @@
                 </div>
                 <a href="">Read More</a>
                 <hr>
-                 -->
+                -->
+            
+                
+                <div class="blog-content">
+                    <img src="img/stock-exchange-board.jpg" alt="New York Stock Exchange">
+                    <h3>Welcome to Blog!</h3>
+                    <p>5/15/2020</p>
+                    <p>This is a short introduction on what this blog is all about.</p>
+                    <a href="blog-posts/welcome-blog">Read More</a>
+                </div>
+                <br>
+                <hr>
+                <div class="blog-content">
+                    <img src="" alt="">
+                    <h3>The Bullearish Market and Twump Issues</h3>
+                    <p>This was a packed week, with the S&P 500 breaking above the 3,000 psychological level, breaking above the 200 ema, big drop in video game stocks, Trumps battle with Twitter, or as I call it, "Twump" and Section 230, fear of another trade war with China, 100,000 deaths from COVID, vaccines, and many more things I can't covere cuz ain't nobody got time for that.</p>
+                </div>
+                <a href="">Read More</a>
+                <hr>
+                <div class="blog-content">
+                    <img src="blog-posts/blog-img/franklin.PNG" alt="GTA 5 Franklin">
+                    <h3>Gaming Gaining</h3>
+                    <p>5/22/2020</p>
+                    <p>Big tech and gaming stocks continue their climb some of these companies benefit from the COVID-19 pandemic and stay-at-home orders. Stocks like TTWO, that reported earnings of $1.07 per share when Wall Street was estimating $0.89 per share, going well above those estimates. In this blog I wanted to talk about gaming company earnings and my opinion on whether I think this momentum will last.</p>
+                    <a href="blog-posts/the-bulear-market-and-gaming">Read More</a>
+                </div>
+                <hr> 
             </section>
         </div>
     </main>
